syntax = "proto2";

package rocks.stalin.scotty;

option java_package = "rocks.stalin.android.app.proto";

message SongMetaData {
    // Name of the playing song
    optional string song_name = 1;

    // Name of the artist
    optional string artist_name = 2;

    // URL to display as background image
    optional string background_image_url = 3;
}